add_executable(ArduinoGame
        main.cpp
        Engine.cpp
        Game.cpp
        Matrix4.cpp
        Nunchuck.cpp
        Vector2.cpp
        Vector3.cpp
		Level/Level.cpp
        Level/TestLevel.cpp
        Level/MenuLevel.cpp
        FastMath.cpp
        ShapeRenderer.cpp
        Entity/Player.cpp
        Entity/Asteroid.cpp
        Random.cpp
        Score.cpp
        Level/GameOver.cpp Level/GameOver.h Keyboard.cpp Keyboard.h Highscore.h)